# auto_serialize_and_deserialize_based_RTTR

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.en.md  README.md  config.json
include/: annotation.h  common.h  from_json.h  from_to_redis.h  to_json.h
src/: CMakeLists.txt
src/json_serialization/: CMakeLists.txt  batch_from.cpp  batch_from.h  batch_to.cpp  batch_to.h  from_json.cpp  to_json.cpp
src/redis_helper/: CMakeLists.txt  redis_helper.cpp  redis_helper.h
test/: CMakeLists.txt
test/basic_test/: CMakeLists.txt  initiate.h  main.cpp
